# neuromed-xai-benchmark

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: BACKGROUND.md  ROADMAP.md  SETUP_MAC.md  SETUP_WINDOWS.md  TECHNICAL_PLAN.md
neuromed_xai_benchmark/: __init__.py  cli.py  pipeline.py  splits.py
neuromed_xai_benchmark/datasets/: __init__.py  base.py  synthetic.py
neuromed_xai_benchmark/features/: __init__.py  psd.py
neuromed_xai_benchmark/models/: psd_baseline.py
neuromed_xai_benchmark/reports/: markdown.py
neuromed_xai_benchmark/xai/: channel_importance.py
promo/: build_method_figure.py
references/: cover-style-board.md  literature-map.md  reading-notes.md
references/literature/: curated-references.md
references/papers/: AI_EEG_brain_disease_diagnosis_2024_PMC11494159.html  EEG_SESM_sleep_staging_SciRep_2024_PMC11555387.html  XAI_seizure_detection_Sensors_2023_PMC10747117.html
references/visual-style/: nature-ieee-cover-study.md
tests/: test_channel_importance.py  test_pipeline.py  test_synthetic_dataset.py
